--- a/packages/vanilla-todo/package.json
+++ b/packages/vanilla-todo/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "vanilla-todo",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^4.4.5"
-  }
+    "name": "vanilla-todo",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "format": "pnpm exec -- npx prettier --write ."
+    },
+    "devDependencies": {
+        "vite": "^4.4.5"
+    }
 }
