--- a/packages/svelte-todo/package.json
+++ b/packages/svelte-todo/package.json
@@ -11,6 +11,7 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
         "format": "prettier --plugin-search-dir . --write .",
+        "prettier:check": "pnpm exec -- npx prettier --plugin-search-dir . --check .",
         "test:integration": "playwright test",
         "test:unit": "vitest"
     },
