--- a/packages/react-todo/package.json
+++ b/packages/react-todo/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "prettier:format": "pnpm exec -- npx prettier --write .",
+    "prettier:check": "pnpm exec -- npx prettier --check .",
     "preview": "vite preview"
   },
   "dependencies": {
