--- a/packages/svelte-todo/package.json
+++ b/packages/svelte-todo/package.json
@@ -10,9 +10,11 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
+		"format": "",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+                "prettier:format": "pnpm exec -- npx prettier --plugin-search-dir . --write .",
+                "prettier:check": "pnpm exec -- npx prettier --plugin-search-dir . --check .",
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
