--- a/packages/vanilla-todo/package.json
+++ b/packages/vanilla-todo/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier:format": "pnpm exec -- npx prettier --write .",
+    "prettier:check": "pnpm exec -- npx prettier --check .",
   },
   "devDependencies": {
     "vite": "^4.4.5"
