--- a/packages/svelte-todo/.prettierrc
+++ b/packages/svelte-todo/.prettierrc
@@ -1,10 +1,10 @@
 {
-        "singleQuote": false,
-        "trailingComma": "all",
-        "tabWidth": 4,
-        "semi": true,
-        "printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "printWidth": 100,
+    "plugins": ["prettier-plugin-svelte"],
+    "pluginSearchDirs": ["."],
+    "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
