--- a/packages/react-todo/package.json
+++ b/packages/react-todo/package.json
@@ -14,11 +14,19 @@
     "all": "npm-run-all --parallel dev server"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
+    "@tanstack/react-query": "^4.32.6",
+    "antd": "^5.8.2",
+    "draft-js": "^0.11.7",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-select": "^5.7.4"
+    "react-loader-spinner": "^5.3.4",
+    "react-rte": "^0.16.5",
+    "react-select": "^5.7.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
