--- a/packages/react-todo/package.json
+++ b/packages/react-todo/package.json
@@ -15,12 +15,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.11.1",
     "@tanstack/react-query": "^4.32.6",
     "antd": "^5.8.2",
+    "cloudinary": "^1.40.0",
     "draft-js": "^0.11.7",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cloudinary-upload-widget": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-loader-spinner": "^5.3.4",
